Fixed log point panel scrollbar issue for Firefox (#8178)

--- a/packages/bvaughn-architecture-demo/components/sources/AutoComplete/AutoComplete.module.css
+++ b/packages/bvaughn-architecture-demo/components/sources/AutoComplete/AutoComplete.module.css
@@ -10,6 +10,10 @@
   font-size: var(--font-size-regular);
   font-family: var(--font-family-monospace);
   color: var(--color-default);
+
+  /* Firefox fixes */
+  scrollbar-width: thin;
+  scrollbar-color: var(--scroll-thumb-color) transparent;
 }
 .Input::-webkit-scrollbar {
   height: 0.5em;
